--- a/packages/@steven-v2/package.json
+++ b/packages/@steven-v2/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@steven/v2",
   "version": "0.0.0",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "./dist/my-lib.umd.js",
   "module": "./dist/my-lib.es.js",
   "exports": {
@@ -17,9 +19,15 @@
     "build": "yarn build:js && yarn build:types"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/parser": "^5.49.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "eslint": "^8.32.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "typescript": "^4.9.4",
     "vite": "^4.0.4",
     "vue": "^3.2.45",
+    "vue-eslint-parser": "^9.1.0",
     "vue-tsc": "^1.0.24"
   },
   "peerDependencies": {
