--- a/packages/@steven-v2/package.json
+++ b/packages/@steven-v2/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "build:js": "vite build",
     "build:types": "vue-tsc --declaration --emitDeclarationOnly --outDir dist --rootDir ./src",
-    "build": "yarn build:js && yarn build:types"
+    "build": "yarn build:js && yarn build:types",
+    "lint": "eslint src --ext .js,.vue,.ts"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
