--- a/packages/@steven-v2/package.json
+++ b/packages/@steven-v2/package.json
@@ -25,6 +25,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "eslint": "^8.32.0",
     "eslint-plugin-vue": "^9.9.0",
+    "pug": "^3.0.2",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
     "vue": "^3.2.45",
