--- a/packages/@steven-v2/package.json
+++ b/packages/@steven-v2/package.json
@@ -17,22 +17,36 @@
     "build:js": "vite build",
     "build:types": "vue-tsc --declaration --emitDeclarationOnly --outDir dist --rootDir ./src",
     "build": "yarn build:js && yarn build:types",
-    "lint": "eslint src --ext .js,.vue,.ts"
+    "lint": "eslint src --ext .js,.vue,.ts",
+    "storybook": "start-storybook -p 6006",
+    "storybook:build": "build-storybook"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-vite": "^0.3.0",
+    "@storybook/testing-library": "^0.0.13",
+    "@storybook/vue3": "^6.5.16",
     "@types/node": "^18.11.18",
     "@typescript-eslint/parser": "^5.49.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "babel-loader": "^8.3.0",
     "eslint": "^8.32.0",
+    "eslint-plugin-storybook": "^0.6.10",
     "eslint-plugin-vue": "^9.9.0",
     "pug": "^3.0.2",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
     "vue": "^3.2.45",
     "vue-eslint-parser": "^9.1.0",
+    "vue-loader": "^16.8.3",
     "vue-tsc": "^1.0.24"
   },
   "peerDependencies": {
     "vue": ">=3.0.0"
-  }
+  },
+  "dependencies": {}
 }
