--- a/packages/@steven-v2/package.json
+++ b/packages/@steven-v2/package.json
@@ -4,6 +4,9 @@
     "type": "git",
     "url": "https://github.com/StevenPewsey/TurborepoPractice.git"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "version": "1.0.0",
   "files": [
     "dist"
