--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,17 +20,10 @@ jobs:
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
+          cache: 'yarn'
 
       - name: Install Dependencies
-        run: yarn
-
-      # - name: Creating .npmrc
-      #   run: |
-      #     cat << EOF > "$HOME/.npmrc"
-      #       //npm.pkg.github.com/:_authToken=$NPM_TOKEN
-      #     EOF
-      #   env:
-      #     NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: yarn --prefer-offline
 
       - name: Create Release Pull Request or Publish to Github Package Registry
         id: changesets
